tests/frontend/fail/array/cross_contract_out_of_bounds3.act
constructor of A
interface constructor()

creates

  uint[3] ar := [1,2,3]



constructor of B
interface constructor(address a1, address a2, address a3)

pointers

  a1 |-> A
  a2 |-> A
  a3 |-> A

creates

  A[3] x := [a1, a2, a3]

ensures post(x[1].ar[4]) == 0
